--- a/test-output/old/Functional Suite/methods.html
+++ b/test-output/old/Functional Suite/methods.html
@@ -1,30 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@2e8c1c9b]">doUserReg</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@2e8c1c9b]">doLogin</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/03 18:52:35</td>   <td>66</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="74a2c7">  <td>20/07/03 18:52:35</td>   <td>174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@548d708a]">validateTitles</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="8ff096">  <td>20/07/03 18:52:36</td>   <td>234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@1c5920df]">doUserReg</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="8ff096">  <td>20/07/03 18:52:36</td>   <td>250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@1c5920df]">thirdTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="8ff096">  <td>20/07/03 18:52:36</td>   <td>256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@1c5920df]">fourthTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="737b89">  <td>20/07/03 18:52:36</td>   <td>298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@2d901eb0]">doLogin</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>20/07/03 20:58:56</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@5afa3c9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>14</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@78e4deb0]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@78e4deb0]">doUserReg</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@78e4deb0]">doLogin</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 20:58:56</td>   <td>96</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@78e4deb0]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="b075bb">  <td>20/07/03 20:58:56</td>   <td>198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@712625fd]">validateTitles</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="e4c792">  <td>20/07/03 20:58:56</td>   <td>244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@15043a2f]">doUserReg</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="e4c792">  <td>20/07/03 20:58:56</td>   <td>263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@15043a2f]">thirdTest</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="e4c792">  <td>20/07/03 20:58:56</td>   <td>269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@15043a2f]">fourthTest</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="7978a5">  <td>20/07/03 20:58:56</td>   <td>311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@5afa3c9]">doLogin</td> 
+  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>20/07/03 20:58:56</td>   <td>365</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@5afa3c9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
 </table>
