--- a/test-output/old/Regression Suite/methods.html
+++ b/test-output/old/Regression Suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:regression.TestCase1@35dab4eb]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:regression.TestCase1@35dab4eb]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:regression.TestCase1@35dab4eb]">doUserReg</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:regression.TestCase1@35dab4eb]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:regression.TestCase1@35dab4eb]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:regression.TestCase1@35dab4eb]">doLogin</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:regression.TestCase1@35dab4eb]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="867e8e">  <td>20/07/02 13:54:27</td>   <td>16</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:regression.TestCase1@35dab4eb]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="69817e">  <td>20/07/02 13:54:27</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:regression.TestCase2@18271936]">validateTitles</td> 
-  <td>main@138817329</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:regression.TestCase1@7a35b0f5]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:regression.TestCase1@7a35b0f5]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:regression.TestCase1@7a35b0f5]">doUserReg</td> 
+  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:regression.TestCase1@7a35b0f5]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:regression.TestCase1@7a35b0f5]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:regression.TestCase1@7a35b0f5]">doLogin</td> 
+  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:regression.TestCase1@7a35b0f5]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="c9739c">  <td>20/07/04 11:08:18</td>   <td>14</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:regression.TestCase1@7a35b0f5]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@809300666</td>   <td></td> </tr>
+<tr bgcolor="eb9ea3">  <td>20/07/04 11:08:18</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:regression.TestCase2@273444fe]">validateTitles</td> 
+  <td>main@809300666</td>   <td></td> </tr>
 </table>
