--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,49 +8,35 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Master Suite</th></tr>
-<tr><th colspan="7">Regression Suite</th></tr>
-<tr><td><a href="#t0">Regression Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">16</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Regression Validate Title Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">13</td><td></td><td></td></tr>
 <tr><th colspan="7">Functional Suite</th></tr>
-<tr><td><a href="#t2">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">96</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Validate Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">35</td><td></td><td></td></tr>
-<tr><td><a href="#t4">Dependency Test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">40</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t5">Failure Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">8</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">6</th><th class="num attn">1</th><th class="num attn">4</th><th class="num">208</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">95</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Validate Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">28</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Dependency Test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">65</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">Failure Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">15</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num attn">1</th><th class="num attn">3</th><th class="num">203</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Master Suite</th></tr></tbody><tbody><tr><th colspan="4">Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">regression.TestCase1</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1593832098768</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m1">doUserReg</a></td><td rowspan="1">1593832098763</td><td rowspan="1">2</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Regression Validate Title Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">regression.TestCase2</td><td><a href="#m2">validateTitles</a></td><td rowspan="1">1593832098799</td><td rowspan="1">8</td></tr></tbody>
-<tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t2"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase1</td><td><a href="#m3">doLogin</a></td><td rowspan="1">1593832098121</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">doUserReg</a></td><td rowspan="1">1593832098072</td><td rowspan="1">8</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Validate Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase2</td><td><a href="#m5">validateTitles</a></td><td rowspan="1">1593832098549</td><td rowspan="1">15</td></tr></tbody>
-<tbody id="t4"><tr><th colspan="4">Dependency Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m6">doUserReg</a></td><td rowspan="1">1593832098637</td><td rowspan="1">2</td></tr><tr><th colspan="4">Dependency Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m7">doLogin</a></td><td rowspan="1">1593832098643</td><td rowspan="1">1</td></tr><tr><th colspan="4">Dependency Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase3</td><td><a href="#m8">fourthTest</a></td><td rowspan="1">1593832098660</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m9">thirdTest</a></td><td rowspan="1">1593832098646</td><td rowspan="1">2</td></tr></tbody>
-<tbody id="t5"><tr><th colspan="4">Failure Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestFailure</td><td><a href="#m10">doLogin</a></td><td rowspan="1">1593832098711</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase1</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1593840501060</td><td rowspan="1">12</td></tr><tr class="passedeven"><td><a href="#m1">doUserReg</a></td><td rowspan="1">1593840501034</td><td rowspan="1">9</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Validate Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase2</td><td><a href="#m2">validateTitles</a></td><td rowspan="1">1593840501237</td><td rowspan="1">15</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Dependency Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m3">doUserReg</a></td><td rowspan="1">1593840501300</td><td rowspan="1">9</td></tr><tr><th colspan="4">Dependency Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m4">doLogin</a></td><td rowspan="1">1593840501332</td><td rowspan="1">0</td></tr><tr><th colspan="4">Dependency Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase3</td><td><a href="#m5">fourthTest</a></td><td rowspan="1">1593840501344</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m6">thirdTest</a></td><td rowspan="1">1593840501339</td><td rowspan="1">2</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">Failure Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestFailure</td><td><a href="#m7">doLogin</a></td><td rowspan="1">1593840501418</td><td rowspan="1">6</td></tr></tbody>
 </table>
-<h2>Regression Login Test</h2><h3 id="m0">regression.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">regression.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Regression Validate Title Test</h2><h3 id="m2">regression.TestCase2#validateTitles</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Yahoo.com] but found [Gmail.com],
-	Image not present. expected [false] but found [true],
-	Text box not present. expected [false] but found [true]
-	at regression.TestCase2.validateTitles(TestCase2.java:42)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Login Test</h2><h3 id="m3">testcases.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testcases.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validate Test</h2><h3 id="m5">testcases.TestCase2#validateTitles</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+<h2>Login Test</h2><h3 id="m0">testcases.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcases.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Validate Test</h2><h3 id="m2">testcases.TestCase2#validateTitles</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Screenshot Link</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
 	expected [Yahoo.com] but found [Gmail.com],
 	Image not present. expected [false] but found [true],
 	Text box not present. expected [false] but found [true]
 	at testcases.TestCase2.validateTitles(TestCase2.java:42)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Dependency Test</h2><h3 id="m6">testcases.TestCase3#doUserReg</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User is not registered successfully.
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Dependency Test</h2><h3 id="m3">testcases.TestCase3#doUserReg</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Screenshot Link</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User is not registered successfully.
 	at testcases.TestCase3.doUserReg(TestCase3.java:11)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">testcases.TestCase3#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@15043a2f] depends on not successfully finished methods
-... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">testcases.TestCase3#fourthTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">testcases.TestCase3#thirdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Failure Test</h2><h3 id="m10">testcases.TestFailure#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failing the Login Test
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testcases.TestCase3#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@15043a2f] depends on not successfully finished methods
+... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">testcases.TestCase3#fourthTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">testcases.TestCase3#thirdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Failure Test</h2><h3 id="m7">testcases.TestFailure#doLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Screenshot Link</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failing the Login Test
 	at testcases.TestFailure.doLogin(TestFailure.java:10)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
