--- a/test-output/index.html
+++ b/test-output/index.html
@@ -417,33 +417,33 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateTitles')
-data.setCell(0, 2, 'testcases.TestCase2')
-data.setCell(0, 3, 17);
+data.setCell(0, 1, 'doLogin')
+data.setCell(0, 2, 'testcases.TestFailure')
+data.setCell(0, 3, 15);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'thirdTest')
-data.setCell(1, 2, 'testcases.TestCase3')
-data.setCell(1, 3, 14);
+data.setCell(1, 1, 'validateTitles')
+data.setCell(1, 2, 'testcases.TestCase2')
+data.setCell(1, 3, 11);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'doUserReg')
 data.setCell(2, 2, 'testcases.TestCase1')
-data.setCell(2, 3, 7);
+data.setCell(2, 3, 8);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'fourthTest')
+data.setCell(3, 1, 'thirdTest')
 data.setCell(3, 2, 'testcases.TestCase3')
-data.setCell(3, 3, 5);
+data.setCell(3, 3, 3);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'doLogin')
-data.setCell(4, 2, 'testcases.TestFailure')
-data.setCell(4, 3, 5);
+data.setCell(4, 2, 'testcases.TestCase1')
+data.setCell(4, 3, 2);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'doUserReg')
+data.setCell(5, 1, 'fourthTest')
 data.setCell(5, 2, 'testcases.TestCase3')
-data.setCell(5, 3, 4);
+data.setCell(5, 3, 2);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'doLogin')
-data.setCell(6, 2, 'testcases.TestCase1')
-data.setCell(6, 3, 2);
+data.setCell(6, 1, 'doUserReg')
+data.setCell(6, 2, 'testcases.TestCase3')
+data.setCell(6, 3, 1);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'doLogin')
 data.setCell(7, 2, 'testcases.TestCase3')
@@ -452,7 +452,7 @@ window.suiteTableData['Functional_Suite']= { tableData: data, tableDiv: 'times-d
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 54 ms</span>
+              <span class="suite-total-time">Total running time: 42 ms</span>
               <div id="times-div-Functional_Suite">
               </div> <!-- times-div-Functional_Suite -->
             </div> <!-- times-div -->
@@ -468,7 +468,7 @@ return data;
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
                 <span class="reporter-method-output"><br></span>
-                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -476,7 +476,7 @@ return data;
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
                 <span class="reporter-method-output"><br></span>
-                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -484,7 +484,7 @@ return data;
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
                 <span class="reporter-method-output"><br></span>
-                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -516,31 +516,31 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
-                <span class="method-start">48 ms</span>
+                <span class="method-start">50 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">doUserReg</span>
-                <span class="method-start">48 ms</span>
+                <span class="method-start">51 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">58 ms</span>
+                <span class="method-start">62 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
-                <span class="method-start">62 ms</span>
+                <span class="method-start">64 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">doLogin</span>
-                <span class="method-start">62 ms</span>
+                <span class="method-start">65 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">67 ms</span>
+                <span class="method-start">74 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">closingDBConn</span>
-                <span class="method-start">68 ms</span>
+                <span class="method-start">75 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -549,7 +549,7 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">validateTitles</span>
-                <span class="method-start">277 ms</span>
+                <span class="method-start">189 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -558,15 +558,15 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">doUserReg</span>
-                <span class="method-start">376 ms</span>
+                <span class="method-start">229 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">thirdTest</span>
-                <span class="method-start">391 ms</span>
+                <span class="method-start">237 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">fourthTest</span>
-                <span class="method-start">415 ms</span>
+                <span class="method-start">243 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -575,11 +575,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">doLogin</span>
-                <span class="method-start">457 ms</span>
+                <span class="method-start">287 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">518 ms</span>
+                <span class="method-start">367 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
